# math-llm

./: .env.example  .gitignore  README.md  llm.md  main.py  pyproject.toml  requirements.txt
app/: auth.py  database.py  llm_service.py  models.py  ocr_service.py  routes.py  schemas.py
