[project]
name = "math-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio==3.4.3",
    "bcrypt>=4.3.0",
    "fastapi==0.104.1",
    "httpx==0.25.1",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic[email]==2.4.2",
    "python-dotenv==1.0.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy>=2.0.41",
    "sse-starlette==1.6.5",
    "uvicorn==0.23.2",
]
